--- a/deepseek_html_20250603_7625d1.html
+++ b/deepseek_html_20250603_7625d1.html
@@ -3,34 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blank Page with Chat Widget</title>
+    <title>Chat Widget Test</title>
+    <!-- Preconnect to CDN for better performance -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
 </head>
 <body>
-    <!-- Your page content would go here -->
+    <h1>Chat Widget Test Page</h1>
+    <p>If the widget doesn't appear, check the browser console for errors.</p>
 
     <!-- Widget Configuration -->
     <script>
-        window.ChatWidgetConfig = {
-            webhook: {
-                url: '<your n8n webhook URL>',
-                route: 'general'
-            },
-            branding: {
-                logo: '<your company logo URL>',
-                name: 'nocodecreative.io', // Your company name
-                welcomeText: 'Hi 👋, how can we help?', //Welcome message
-                responseTimeText: 'We typically respond right away' //Response time message
-            },
-            style: {
-                primaryColor: '#854fff', //Primary color
-                secondaryColor: '#6b3fd4', //Secondary color
-                position: 'right', //Position of the widget (left or right)
-                backgroundColor: '#ffffff', //Background color of the chat widget
-                fontColor: '#333333' //Text color for messages and interface
-            }
-        };
+        // Ensure this runs after DOM is loaded
+        document.addEventListener('DOMContentLoaded', function() {
+            window.ChatWidgetConfig = {
+                webhook: {
+                    url: 'https://your-n8n-instance.com/webhook/path', // REPLACE with your actual URL
+                    route: 'general'
+                },
+                branding: {
+                    logo: 'https://example.com/your-logo.png', // REPLACE with your logo URL
+                    name: 'nocodecreative.io',
+                    welcomeText: 'Hi 👋, how can we help?',
+                    responseTimeText: 'We typically respond right away'
+                },
+                style: {
+                    primaryColor: '#854fff',
+                    secondaryColor: '#6b3fd4',
+                    position: 'right',
+                    backgroundColor: '#ffffff',
+                    fontColor: '#333333'
+                }
+            };
+            
+            // Load the widget script dynamically
+            const script = document.createElement('script');
+            script.src = 'https://cdn.jsdelivr.net/gh/WayneSimpson/n8n-chatbot-template@ba944c3/chat-widget.js';
+            script.onerror = function() {
+                console.error('Failed to load chat widget script');
+            };
+            document.body.appendChild(script);
+        });
     </script>
-    <script src="https://cdn.jsdelivr.net/gh/WayneSimpson/n8n-chatbot-template@ba944c3/chat-widget.js"></script>
-    <!-- Widget Script -->
 </body>
 </html>
